<resources>
    <string name="app_name">Ječňák v kapse</string>
    <string name="demo">Demo</string>

    <string name="mala">Malá</string>
    <string name="velka">Velká</string>

    <string name="povolit">Povolit</string>
    <string name="zakazat">Zakázat</string>
    <string name="zavrit">Zavřít</string>
    <string name="prihlasit">Přihlásit</string>
    <string name="ano">Ano</string>
    <string name="zrusit">Zrušit</string>
    <string name="zobrazit">Zobrazit</string>

    <string name="menu_prihlasit">Přihásit</string>
    <string name="menu_odhlasit">Odhlásit</string>
    <string name="menu_znamky">Známky</string>
    <string name="menu_rozvrh">Rozvrh</string>
    <string name="menu_prichody">Příchody</string>
    <string name="menu_omluvenky">Omluvenky</string>
    <string name="menu_suplovani">Suplování</string>
    <string name="menu_nahlasit_problem">Nahlásit problém</string>
    <string name="menu_nastaveni">Nastavení</string>
    <string name="menu_o_aplikaci">O aplikaci</string>

    <string name="vyber_mailoveho_klienta">Výběr mailového klienta</string>
    <string name="zadna_app_na_mail">Nenalezena žádná aplikace na posílání emailů</string>
    <string name="problem_predmet">Problém v aplikaci Ječňák v kapse</string>

    <string name="error_no_score_table">Tabulka známek nenalezena</string>
    <string name="error_score_convert">Známky se nepodařilo zpracovat</string>

    <string name="theme_pink_enabled">Růžové téma povoleno</string>
    <string name="theme_pink_disabled">Růžové téma zakázáno</string>
    <string name="theme_code_red_enabled">Code red téma povoleno</string>
    <string name="theme_code_red_disabled">Code red téma zakázáno</string>

    <string name="dialog_loading_prihlasovani">Přihlašování…</string>

    <string name="dialog_error_title">Error</string>

    <string name="dialog_change_period_title">Výběr období</string>
    <string name="dialog_change_period_aktualni">Aktuální</string>

    <string name="dialog_odhlasit_title">Odhlásit?</string>
    <string name="dialog_odhlasit_odhlaseno">Odhlášeno</string>

    <string name="dialog_login_title">Přihlášení</string>

    <string name="dialog_enable_crashlytics">Povolit Crashlytics</string>
    <string name="dialog_enable_crashlytics_message">Povolit aplikaci <i>Ječňák v kapse</i> odesílat zprávy o chybách?\n\nOdeslaná data <b>neobsahují</b> Vaše přihlašovací údaje nebo jakákoliv jiná citlivá data.\n\nLze později upravit v nastavení.</string>

    <string name="settings_fragment_first_title">Hlavní okno</string>
    <string name="settings_fragment_first_subtext">Okno které se otevře jako první při zapnutí aplikace</string>

    <string name="settings_theme_title">Motiv</string>
    <string name="settings_theme_experimental">Vyžaduje restart aplikace</string>
    <string name="settings_theme_light">Světlý motiv</string>
    <string name="settings_theme_dark">Tmavý motiv</string>
    <string name="settings_theme_pink">Růžový motiv</string>
    <string name="settings_theme_red">Code red motiv</string>
    <string name="settings_crashlytics_title">Crashlytics</string>
    <string name="settings_crashlytics">Povolit sběr dat o chybách</string>

    <string name="oaplikaci_vyvojar_title">Vývojář</string>
    <string name="oaplikaci_vyvojar_jmeno">Johny Da Developer</string>
    <string name="oaplikaci_vyvojar_kontakt">johnydadeveloper@gmail.com</string>
    <string name="oaplikaci_vyvojar_github">Kód aplikace (GitHub)</string>
    <string name="oaplikaci_app_title">Aplikace</string>
    <string name="oaplikaci_app_verze">Verze</string>
    <string name="oaplikaci_app_build">Build</string>
    <string name="oaplikaci_app_library_catoslibrary">CatosLibrary</string>
    <string name="oaplikaci_info_title">Dodatečné informace</string>
    <string name="oaplikaci_info_suplarch">Suplování se stahuje do cache aplikace. Při každém zapnutí aplikace se cache vymaže.</string>
    <string name="oaplikaci_credits_title">Lidé, kteří přispěli k vývoji aplikace:</string>
    <string name="oaplikaci_credits_vojtech_kopriva">Vojtěch Kopřiva</string>

    <string name="no_items">Žádná data</string>
</resources>
