<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Jecnak.CardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Text_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oaplikaci_vyvojar_title"/>

        <TextView
            style="@style/Text_Subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/person"
            android:gravity="center_vertical"
            android:drawablePadding="5dp"
            android:text="@string/oaplikaci_vyvojar_jmeno"/>

        <TextView
            style="@style/LinkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/mail"
            android:gravity="center_vertical"
            android:drawablePadding="5dp"
            android:onClick="posliMail"
            android:text="@string/oaplikaci_vyvojar_kontakt"/>

        <TextView
            style="@style/LinkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/github"
            android:gravity="center_vertical"
            android:drawablePadding="5dp"
            android:onClick="gitHub"
            android:text="@string/oaplikaci_vyvojar_github"/>
    </LinearLayout>
</android.support.v7.widget.CardView>