<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Jecnak.CardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Text_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oaplikaci_app_title"/>

        <TextView
            android:id="@+id/OAplikaci_appVerze"
            style="@style/Text_Subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/version"
            android:gravity="center_vertical"
            android:drawablePadding="5dp"
            android:text="@string/oaplikaci_app_verze"/>

        <TextView
            style="@style/LinkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/book"
            android:gravity="center_vertical"
            android:drawablePadding="5dp"
            android:text="@string/oaplikaci_app_library_catoslibrary"
            android:onClick="catosLibrary" />
    </LinearLayout>
</android.support.v7.widget.CardView>